# tests

./: .clang-tidy  .gitpod.dockerfile  CMakeCache.txt  CMakeLists.txr  CMakeLists.txt  mqtt_cpp  mqtt_new  mqtt_pub  mqtt_pub.cpp  mqtt_pub1.c  weather_app.sh
.devcontainer/: Dockerfile  dockerfile
.github/workflows/: cmake.yml
Hello_World/: .clang-tidy  CMakeLists.txt
Hello_World/.devcontainer/: devcontainer.json  dockerfile
Hello_World/adder/: CMakeLists.txt
Hello_World/adder/include/: functions.h
Hello_World/adder/src/: functions.cpp  main.cpp
Hello_World/adder/test/: test_functions.cpp
Hello_World/dynamic_store/: malloc.c
Hello_World/firsttry/: CMakeLists.txt  firsttry.c++  struct.cpp  student.cpp
Hello_World/firsttry/include/: student.h
Hello_World/firsttry/src/: main.c++  student.c++
Hello_World/googletest/: CMakeLists.txt
Hello_World/googletest/src/: student.c
Hello_World/googletest/test/: test_student_struct.cpp
Hello_World/inheritance/: a.out  inheritance_triangle.cpp
Hello_World/new/: CMakeLists.txt  a.out  dynamic_memory.cpp  newfile.cpp  unique_ptr.cpp
Hello_World/operation/: animals.cpp
include/: developer.h  developer_group.h
src/: a.out  developer.c  developer_group.c  main.c
